# inspect-error

./: Cargo.toml  README.md
.github/workflows/: general.yaml
doc/: settings.html
doc/doc/: search-index.js  source-files.js
doc/implementors/inspect_error/: trait.InspectError.js
doc/inspect_error/: all.html  index.html
doc/src/inspect_error/: lib.rs.html
docs/: _redirects  crates.js  help.html
docs/inspect_error/: index.html  sidebar-items.js  trait.InspectError.html
docs/src/inspect_error/: lib.rs.html
src/: lib.rs
